--- a/Pages/Mastermind.razor.css
+++ b/Pages/Mastermind.razor.css
@@ -7,8 +7,10 @@
     margin: 0 auto;
 }
 
-
-
+h1 {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
@@ -105,7 +107,7 @@
 .pin {
     border: 1px solid black;
     border-radius: 5px;
-    background-color: ghostwhite;
+    background-color: saddlebrown;
     width: 10px;
     height: 10px;
 }
