--- a/Pages/Mastermind.razor
+++ b/Pages/Mastermind.razor
@@ -1,21 +1,22 @@
-﻿@page "/mastermind"
-
+﻿@inject IJSRuntime JsRuntime
+@page "/mastermind"
 <PageTitle>Mastermind</PageTitle>
 <h1>Mastermind</h1>
-<p>@gblack</p>
-<p>@gwhite</p>
-@foreach(var kpv in randomcolorNums)
+@for (int i = 0; i < 4; i++)
 {
-	<p>@kpv.Key - @kpv.Value</p>
+	<p>@randomcolors[i]</p>
 }
-<p></p>
+<p>@currentrow</p>
+
+
 <div class="table">
 	<div class="gamespace">
 		<section>
 			<div class="dhead">
 				@for (int i = 0; i < 4; i++)
 				{
-					<div class="dheaditem" style="background-color:@randomcolors[i]"></div>
+					int index = i;
+					<div class="dheaditem" style="@HideOrReveal(index)"></div>
 				}
 			</div>
 		</section>
@@ -48,7 +49,7 @@
 		</section>
 	</div>
 	<div class="sidepart">
-		<button>Felad</button>
+		<button @onclick="() => currentrow = 11">Felad</button>
 		<div class="rowresult">
 			@for (int i = 0; i < 11; i++)
 			{
@@ -56,6 +57,7 @@
 				<div class="pinpanel">
 					@for (int j = 0; j < 4; j++)
 					{
+
 						int pin = j;
 						<div class="pin" style="@ChangePinResultColor(i,j)"></div>
 					}
@@ -65,6 +67,12 @@
 		<button @onclick="() => Check()">Csekk</button>
 	</div>
 </div>
+
+
+
+<p>@activeRound</p>
+<p>@WinOrLose()</p>
+<p>@currentrow</p>
 
 
 @code {
@@ -77,6 +85,8 @@
 	private string[,] pins = new string[11,4];
 	private Dictionary<string, int> randomcolorNums = new();
 	private string[,] pinresults = new string[11, 4];
+	private int blacks = 0;
+	private bool activeRound = true;
 
 	private int gblack;
 	private int gwhite;
@@ -96,6 +106,35 @@
 		SelectColor(0);
 	}
 
+	private string HideOrReveal(int index){
+		blacks = 0;
+		for (int i = 0; i < 4; i++)
+		{
+			if (currentrow > 0)
+			{
+				if (pinresults[currentrow-1, i] == "black")
+				{
+					blacks++;
+				}
+			}
+		}
+
+		if (blacks >= 4)	
+		{
+			activeRound = false;
+		}
+
+		if (currentrow >= 11){
+			activeRound = false;
+		}
+
+		if (activeRound){
+			return $"background-color: gray";
+		}
+
+		return $"background-color: {randomcolors[index]}";
+	}
+
 	private void SelectColor(int index){
 		selectedcolor = colors[index];
 		selectedcolorindex = index;
@@ -113,9 +152,11 @@
 	}
 
 	private void PinColor(int row, int circle){
-		if (currentrow == row)
-		{
-			pins[row, circle] = selectedcolor;
+		if (activeRound){
+			if (currentrow == row)
+			{
+				pins[row, circle] = selectedcolor;
+			}
 		}
 	}
 
@@ -176,6 +217,7 @@
 					pinresults[currentrow, i] = "gray";
 				}
 			}
+			GameEnd();
 			currentrow++;
 		}
 	}
@@ -193,18 +235,45 @@
 		}
 		for (int i = 0; i < 4; i++)
 		{
-			
+
 			if (randomcolorNums.Any(kv => kv.Key == pins[currentrow,i] && kv.Value > 0))
 			{
 				randomcolorNums[pins[currentrow, i]]--;
 				whitepins++;
 			}
 		}
-		
+
 		return [blackpins, whitepins];
 	}
 
 	private string ChangePinResultColor(int pinrow, int pin){
 		return $"background-color:{pinresults[pinrow, pin]};";
+	}
+
+	private bool WinOrLose(){
+		bool result = true;
+		if (blacks >= 4)
+		{
+			result = true;
+			return result;
+		}
+		if (currentrow >= 11)
+		{
+			result = false;
+		}
+		return result;
+	}
+
+	private void GameEnd(){
+		if (!activeRound && WinOrLose())
+		{
+			JsRuntime.InvokeVoidAsync("alert", "Nyertél!");
+			currentrow = 11;
+		}
+		else if (!activeRound && !WinOrLose())
+		{
+			JsRuntime.InvokeVoidAsync("alert", "Vesztettél!");
+			currentrow = 11;
+		}
 	}
 }
