--- a/wwwroot/css/Mastermind.scss
+++ b/wwwroot/css/Mastermind.scss
@@ -1,8 +1,30 @@
 ﻿.board {
+    background-color: greenyellow;
+    width: fit-content;
+    padding: 20px 20px;
     .question {
     }
 
-    .tries {
+    .rounds {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+
+        .round {
+            display: flex;
+
+            .pegs {
+                display: flex;
+                gap: 4px;
+            }
+
+            .pins {
+                display: grid;
+                grid-template-rows: repeat(2, 1fr);
+                grid-auto-flow: column;
+                gap: 4px;
+            }
+        }
     }
 
     .colors {
@@ -11,9 +33,14 @@
     }
 
     .peg {
-        width: 16px;
-        height: 16px;
+        width: 30px;
+        height: 30px;
         border-radius: 50%;
+        border: 1px solid black;
+    }
+
+    .peg-none {
+        background-color: bisque;
     }
 
     .peg-a {
@@ -38,5 +65,24 @@
 
     .peg-f {
         background-color: purple;
+    }
+
+    .pin {
+        width: 12px;
+        height: 12px;
+        border-radius: 50%;
+        border: 1px solid black;
+    }
+
+    .pin-none {
+        background-color: bisque;
+    }
+
+    .pin-black {
+        background-color: black;
+    }
+
+    .pin-white {
+        background-color: white;
     }
 }
