--- a/wwwroot/css/Mastermind.css
+++ b/wwwroot/css/Mastermind.css
@@ -2,6 +2,7 @@
   background-color: greenyellow;
   width: fit-content;
   padding: 20px 20px;
+  border-radius: 30px;
 }
 .board .rounds {
   display: flex;
@@ -56,6 +57,9 @@
 .board .peg-f {
   background-color: purple;
 }
+.board .peg-g {
+  background-color: white;
+}
 .board .pin {
   width: 12px;
   height: 12px;
@@ -70,4 +74,25 @@
 }
 .board .pin-white {
   background-color: white;
+}
+
+button {
+  border-radius: 15px;
+  border: none;
+  width: fit-content;
+  height: 30px;
+  background-color: indianred;
+  color: white;
+}
+
+.options {
+  display: flex;
+  flex-direction: column;
+}
+.options .opt-input {
+  background-color: bisque;
+  border: none;
+  border-radius: 25px;
+  width: 40px;
+  text-align: center;
 }
