--- a/Pages/Mastermind2.razor
+++ b/Pages/Mastermind2.razor
@@ -1,34 +1,75 @@
 ﻿@page "/game"
 
-<Board  Mastermind=@_mastermind />
+<Board Mastermind=@_mastermind>
+	<EmptyPegTemplate>
+		<PegComponent />
+	</EmptyPegTemplate>
+	<EmptyPinTemplate>
+		<PinComponent Pin="Pin.None" />
+	</EmptyPinTemplate>
+	<PegTemplate>
+		<PegComponent Peg="context" />
+	</PegTemplate>
+	<PinTemplate>
+		<PinComponent Pin="context" />
+	</PinTemplate>
+	<GuessTemplate>
+		@foreach (var peg in _guess.Pegs) // GuessComponent
+		{
+			<PegComponent Peg="peg" />
+		}
+	</GuessTemplate>
+	<ColorsTemplate>
+		@foreach (var peg in _mastermind.AvailableColors) //AvailableComponent
+		{
+			<PegComponent Peg="peg" PickColor=@PickColorHandler />
+		}
+	</ColorsTemplate>
+</Board>
 
-<button type="button" @onclick="TippHandler">Tipp</button>
+<Options Settings=@_mastermind.Settings OnOptionsChanged=@ChangeSettings />
 
-<Options Settings=@_mastermind.Settings OnOptionsChanged=@ChangeSettings/>
+@_message
 
 @code {
 	private Mastermind _mastermind;
+	private Guess _guess;
+	private string _message;
 
 	protected override void OnInitialized()
 	{
 		_mastermind = Mastermind.Create();
+		_guess = _mastermind.CreateGuess();
+		_mastermind.MessageReceived += MessageReceivedHandler;
+		_mastermind.MessageReceived -= MessageReceivedHandler;
+
+		_mastermind.GameFinished += (sender, winner) =>
+		{
+			_message = winner ? "Győztél." : "Vesztettél.";
+		};
 
 		base.OnInitialized();
 	}
 
-	private void TippHandler()
+	private void MessageReceivedHandler(object sender, string message)
 	{
-		var guess = _mastermind.CreateGuess();
-		for (int i = 0; i < _mastermind.Settings.PegNum; i++)
-		{
-			guess.SetPeg(i, _mastermind.Selected[i]);
-		}
-		_mastermind.AddGuess(guess);
-		_mastermind.EmptyQueue();
+		_message = message;
 	}
 
-	private void ChangeSettings(Settings settings){
+	private void ChangeSettings(Settings settings)
+	{
 		_mastermind.Configure(settings);
+	}
+
+	private void PickColorHandler(Peg peg)
+	{
+		_guess.AddPeg(peg);
+		if (_guess.IsValid())
+		{
+			_mastermind.AddGuess(_guess);
+			_guess = _mastermind.CreateGuess();
+
+		}
 	}
 }
 
