--- a/Components/Board.razor
+++ b/Components/Board.razor
@@ -1,7 +1,12 @@
 ﻿<h3>Board</h3>
 
 <div class="board">
-	<div class="question"></div>
+	<div class="question" style="@(Mastermind.GameEnded ? "display: flex" : "display: none")">
+		@for (int i = 0; i < Mastermind.Settings.PegNum; i++)
+		{
+			@QuestionTemplate(Mastermind.Question.Pegs[i])
+		}
+	</div>
 	<div class="rounds">
 		@for (int i = 0; i < Mastermind.Settings.TriesNum; i++)
 		{
@@ -24,7 +29,11 @@
 				else if(Mastermind.Rounds.Count == i) 
 				{
 					<div class="pegs">
-						@GuessTemplate
+						@for(int g = 0; g < Mastermind.Settings.PegNum; g++)
+						{
+							@GuessTemplate(g)
+						}
+
 					</div>
 					<div class="pins">
 						@for (int l = 0; l < Mastermind.Settings.PegNum; l++)
@@ -52,9 +61,13 @@
 			</div>
 		}
 	</div>
-	
+
 	<div class="colors">
-		@ColorsTemplate
+		@for(int i = 0; i < Mastermind.AvailableColors.Count; i++)
+		{
+			@ColorsTemplate(Mastermind.AvailableColors[i])
+		}
+
 	</div>
 </div>
 
@@ -64,7 +77,7 @@
 	[Parameter] public RenderFragment<Peg> PegTemplate { get; set; }
 	[Parameter] public RenderFragment EmptyPinTemplate { get; set; }
 	[Parameter] public RenderFragment<Pin> PinTemplate { get; set; }
-	[Parameter] public RenderFragment GuessTemplate { get; set; }
-	[Parameter] public RenderFragment ColorsTemplate { get; set; }
-
+	[Parameter] public RenderFragment<int> GuessTemplate { get; set; }
+	[Parameter] public RenderFragment<Peg> ColorsTemplate { get; set; }
+	[Parameter] public RenderFragment<Peg> QuestionTemplate { get; set; }
 }
