--- a/Pages/Mastermind2.razor
+++ b/Pages/Mastermind2.razor
@@ -1,77 +1,3 @@
 ﻿@page "/game"
-<Clock>
-</Clock>
-<Board Mastermind=@_mastermind>
-	<QuestionTemplate>
-		<PegComponent Peg="context" />
-	</QuestionTemplate>
-	<EmptyPegTemplate>
-		<PegComponent />
-	</EmptyPegTemplate>
-	<EmptyPinTemplate>
-		<PinComponent Pin="Pin.None" />
-	</EmptyPinTemplate>
-	<PegTemplate>
-		<PegComponent Peg="context" />
-	</PegTemplate>
-	<PinTemplate>
-		<PinComponent Pin="context" />
-	</PinTemplate>
-	<GuessTemplate>
-		<PegComponent Peg="_guess.Pegs[context]" />
-	</GuessTemplate>
-	<ColorsTemplate>
-		<PegComponent Peg="context" PickColor=@PickColorHandler />
-	</ColorsTemplate>
-</Board>
 
-<Options Settings=@_mastermind.Settings OnOptionsChanged=@ChangeSettings />
-
-@_message
-
-@code {
-	private Mastermind _mastermind;
-	private Guess _guess;
-	private string _message;
-
-	protected override void OnInitialized()
-	{
-		_mastermind = Mastermind.Create();
-		_guess = _mastermind.CreateGuess();
-		_mastermind.MessageReceived += MessageReceivedHandler;
-		_mastermind.MessageReceived -= MessageReceivedHandler;
-
-		_mastermind.GameFinished += (sender, winner) =>
-		{
-			_message = winner ? "Győztél." : "Vesztettél.";
-		};
-
-		base.OnInitialized();
-	}
-
-	private void MessageReceivedHandler(object sender, string message)
-	{
-		_message = message;
-	}
-
-	private void ChangeSettings(Settings settings)
-	{
-		_mastermind.Configure(settings);
-		_message = null;
-	}
-
-	private void PickColorHandler(Peg peg)
-	{
-		if(!_mastermind.GameEnded)
-		{
-			_guess.AddPeg(peg);
-			if (_guess.IsValid())
-			{
-				_mastermind.AddGuess(_guess);
-				_guess = _mastermind.CreateGuess();
-
-			}
-		}
-	}
-}
-
+<Game />
