--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<InputFileComponent />
 
-<h1>Hello, world!</h1>
+<!--
+<ExchangeRateComponent />
 
-Welcome to your new app.
+-->
