--- a/_Imports.razor
+++ b/_Imports.razor
@@ -12,3 +12,5 @@
 @using Gyak.Game;
 @using Gyak.Components;
 @using System.Text.RegularExpressions
+@using System.Text.Json;
+@using System.Text.Json.Nodes;
