--- a/Components/InputFileComponent.razor
+++ b/Components/InputFileComponent.razor
@@ -1,4 +1,5 @@
-﻿<EditForm OnValidSubmit="FileUploadHandler" Model=@this>
+﻿<h2>FÁJL FELTÖLTÉS</h2>
+<EditForm OnValidSubmit="FileUploadHandler" Model=@this>
     <InputFile OnChange="OnInputFileChange" />
 </EditForm>
 <select>
